<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.translator.MainActivity"
    android:transitionGroup="true">

    <RelativeLayout android:id="@+id/mainLayoutHu"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:visibility="gone">
        <LinearLayout android:id="@+id/linearLabelLayoutHu"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            style="@style/Green" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/magyar_latin"
                style="@style/Green" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/csere"
                android:id="@+id/changeButtonHu" />
        </LinearLayout>
        <LinearLayout android:id="@+id/linearLayoutHu"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_below="@+id/linearLabelLayoutHu">
            <AutoCompleteTextView
                android:hint="@string/magyar"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:id="@+id/editTextHu"
                android:layout_height="wrap_content"
                android:layout_width="0dp">
            </AutoCompleteTextView>
            <ImageView
                android:id="@+id/clearHu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@android:drawable/ic_delete" />
            <ImageView
                android:id = "@+id/speakHu"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_marginTop="10dp"
                android:background = "?selectableItemBackground"
                android:src = "@android:drawable/ic_btn_speak_now"
                android:contentDescription="@string/mikrofon" />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forditas"
            android:id="@+id/translateButtonHu"
            android:layout_below="@+id/linearLayoutHu"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

        <LinearLayout android:id="@+id/linearInnerHu"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_below="@+id/translateButtonHu" >
            <TextView android:id="@+id/textViewHu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout android:id="@+id/mainLayoutLa"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <LinearLayout android:id="@+id/linearLabelLayoutLa"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            style="@style/Green" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/latin_magyar"
                style="@style/Green" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/csere"
                android:id="@+id/changeButtonLa" />
        </LinearLayout>

        <LinearLayout android:id="@+id/linearLayoutLa"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_below="@+id/linearLabelLayoutLa">
            <AutoCompleteTextView
                android:hint="@string/latin"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:id="@+id/editTextLa"
                android:layout_height="wrap_content"
                android:layout_width="0dp">
            </AutoCompleteTextView>
            <ImageView
                android:id="@+id/clearLa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@android:drawable/ic_delete" />
            <ImageView
                android:id = "@+id/speakLa"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_marginTop="10dp"
                android:background = "?selectableItemBackground"
                android:src = "@android:drawable/ic_btn_speak_now"
                android:contentDescription="@string/mikrofon" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/suffixLa"
            android:layout_below="@+id/linearLayoutLa"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forditas"
            android:id="@+id/translateButtonLa"
            android:layout_below="@+id/suffixLa"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />
        <LinearLayout android:id="@+id/linearInnerLa"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_below="@+id/translateButtonLa" >
            <TextView android:id="@+id/textViewLa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </RelativeLayout>
    <Spinner
        android:id="@+id/declinatioSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/declinatio_images"
        android:layout_marginTop="240dp"/>
    <com.ortiz.touchview.TouchImageView
        android:id="@+id/declinatioImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/declinatio1"
        android:theme="@style/SpinnerItem"
        android:layout_marginTop="280dp" />
</RelativeLayout>